- Fixed: text-align of rtl toc

--- a/templates/html/doxygen.css
+++ b/templates/html/doxygen.css
@@ -1354,8 +1354,9 @@ div.toc {
         width: 200px;
 }
 
-.PageDocRTL-title .toc {
+.PageDocRTL-title div.toc {
   float: left !important;
+  text-align: right;
 }
 
 div.toc li {
@@ -1364,6 +1365,12 @@ div.toc li {
         margin-top: 5px;
         padding-left: 10px;
         padding-top: 2px;
+}
+
+.PageDocRTL-title div.toc li {
+  background-position-x: right !important;
+  padding-left: 0 !important;
+  padding-right: 10px;
 }
 
 div.toc h3 {
@@ -1393,6 +1400,26 @@ div.toc li.level3 {
 
 div.toc li.level4 {
         margin-left: 45px;
+}
+
+.PageDocRTL-title div.toc li.level1 {
+  margin-left: 0 !important;
+  margin-right: 0;
+}
+
+.PageDocRTL-title div.toc li.level2 {
+  margin-left: 0 !important;
+  margin-right: 15px;
+}
+
+.PageDocRTL-title div.toc li.level3 {
+  margin-left: 0 !important;
+  margin-right: 30px;
+}
+
+.PageDocRTL-title div.toc li.level4 {
+  margin-left: 0 !important;
+  margin-right: 45px;
 }
 
 .inherit_header {
